fix(css): use min height to make sure entire screen is covered

--- a/spot-client/src/common/css/reset.scss
+++ b/spot-client/src/common/css/reset.scss
@@ -72,7 +72,7 @@ body {
 
 body,
 body > div {
-    height: 100%;
+    min-height: 100%;
     width: 100%;
 }
 /**
