--- a/spot-client/src/common/css/temp.scss
+++ b/spot-client/src/common/css/temp.scss
@@ -132,7 +132,7 @@ body.using-mouse :focus {
 .loading {
     @include centered-content;
 
-    height: 100%;
+    min-height: 100%;
     width: 100%;
 }
 
@@ -146,7 +146,6 @@ body.using-mouse :focus {
 */
 .view {
   background-size: cover;
-  height: 100%;
   min-height: 100%;
   width: 100%;
 }
@@ -155,7 +154,7 @@ body.using-mouse :focus {
   align-items: center;
   background-size: cover;
   display: flex;
-  height: 100%;
+  min-height: 100%;
   min-height: 100%;
   justify-content: center;
   width: 100%;
@@ -167,5 +166,5 @@ body.using-mouse :focus {
 }
 
 .app {
-  height: 100%;
+  min-height: 100%;
 }
